--- a/activites.html
+++ b/activites.html
@@ -107,7 +107,7 @@
 
             <div class="ms-4">
               <a
-                href="login.html"
+                href="login.php"
                 class="btn custom-btn custom-border-btn smoothscroll"
                 >Espace pro</a
               >
@@ -591,7 +591,7 @@
               <strong class="d-inline me-2">Téléhone:</strong> +596 596 52 60 02
             </p>
             <p class="mb-1">
-              <strong class="d-inline me-2">Mobile:</strong> +596 696 52 60 02
+              <strong class="d-inline me-2">Mobile:</strong> +596 696 52 08 62
             </p>
             <p>
               <strong class="d-inline me-2">Site Web:</strong>
