--- a/contact.html
+++ b/contact.html
@@ -105,7 +105,7 @@
 
             <div class="ms-4">
               <a
-                href="login.html"
+                href="new_page.html"
                 class="btn custom-btn custom-border-btn smoothscroll"
                 >Espace pro</a
               >
@@ -453,7 +453,7 @@
               <strong class="d-inline me-2">Téléhone:</strong> +596 596 52 60 02
             </p>
             <p class="mb-1">
-              <strong class="d-inline me-2">Mobile:</strong> +596 696 52 60 02
+              <strong class="d-inline me-2">Mobile:</strong> +596 696 52 08 62
             </p>
             <p>
               <strong class="d-inline me-2">Site Web:</strong>
