--- a/actions.html
+++ b/actions.html
@@ -75,7 +75,7 @@
                     </ul>
 
                     <div class="ms-4">
-                        <a href="login.php" class="btn custom-btn custom-border-btn smoothscroll">Espace pro</a>
+                        <a href="login.php" class="btn custom-btn custom-border-btn ">Espace pro</a>
                     </div>
                 </div>
             </div>
