--- a/activites.html
+++ b/activites.html
@@ -106,9 +106,7 @@
             </ul>
 
             <div class="ms-4">
-              <a
-                href="login.php"
-                class="btn custom-btn custom-border-btn smoothscroll"
+              <a href="login.php" class="btn custom-btn custom-border-btn"
                 >Espace pro</a
               >
             </div>
