--- a/new_page.html
+++ b/new_page.html
@@ -51,6 +51,13 @@
                   <li class="nav-item">
                     <a class="nav-link" href="contact.html">Contact</a>
                   </li>
+
+                  <li class="nav-item ms-5">
+                    <a class="nav-link" href="logout.php">
+                        <i class="bi bi-box-arrow-right"></i> Se déconnecter
+                    </a>
+                </li>
+
                 </ul>
     
               </div>
