--- a/services.html
+++ b/services.html
@@ -75,14 +75,14 @@
                     </ul>
 
                     <div class="ms-4">
-                        <a href="login.php" class="btn custom-btn custom-border-btn smoothscroll">Espace pro</a>
+                        <a href="login.php" class="btn custom-btn custom-border-btn ">Espace pro</a>
                     </div>
                 </div>
             </div>
         </nav>
 
         <!-- Section BANNIERE -->
-        <section class="banniere3">
+        <section class="banniere3" id="section_services">
             <div class="container">
                 <div class="row">
 
@@ -241,7 +241,7 @@
                 <div class="row">
                     <div class="col-md-12">
                         <p class="text-white-on-black">"Vers un avenir marin meilleur.""</p>
-                        <a href="contact.html" class="btn custom-btn smoothscroll mt-3">Contact</a>
+                        <a href="#section_services" class="btn custom-btn smoothscroll mt-3">Nos prestations en images</a>
                     </div>
                 </div><!-- /.row -->
             </div>
