--- a/contact.html
+++ b/contact.html
@@ -104,9 +104,7 @@
             </ul>
 
             <div class="ms-4">
-              <a
-                href="new_page.html"
-                class="btn custom-btn custom-border-btn smoothscroll"
+              <a href="new_page.html" class="btn custom-btn custom-border-btn"
                 >Espace pro</a
               >
             </div>
@@ -207,9 +205,7 @@
                 "Votre contribution peut être le point de départ d'un changement
                 positif"
               </p>
-              <a href="contact.html" class="btn custom-btn smoothscroll mt-3"
-                >Contact</a
-              >
+              
             </div>
           </div>
           <!-- /.row -->
