--- a/new_page.html
+++ b/new_page.html
@@ -94,6 +94,11 @@
 
   </main>
 
+  <!--fichiers JS -->
+  <script src="assets/js/jquery.min.js"></script>
+  <script src="assets/js/bootstrap.bundle.min.js"></script>
+  <script src="assets/js/owl.carousel.min.js"></script>
+  <script src="assets/js/prefixfree.min.js"></script>
   <script src="assets/js/script.js"></script>
 </body>
 
