--- a/services.html
+++ b/services.html
@@ -85,7 +85,7 @@
     </nav>
 
     <!-- Section BANNIERE -->
-    <section class="banniere3" id="section_services">
+    <section class="banniere7" id="section_services">
       <div class="container">
         <div class="row">
 
@@ -245,7 +245,7 @@
     </section>
 
     <!--Section parallax Appel a l'action-->
-    <section class="appel-action">
+    <section class="appel-action5">
       <div class="container">
         <div class="row">
           <div class="col-md-12">
